--- a/Book Web Api/appsettings.json
+++ b/Book Web Api/appsettings.json
@@ -1,4 +1,5 @@
-{
+{  
+  "secret": "1324",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Book;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
